# memkit

./: .gitignore  .gitmodules  CONTEXT.md  Cargo.toml  README.md  build.rs  dist-workspace.toml  package.json  spec.md
.github/workflows/: deploy-ecs.yml  release.yml
benchmarks/: .gitignore  BENCHMARKS.md  download_data.ts  package.json  run_longmemeval_benchmark.ts  summarize_longmemeval_misses.py
convex/: cli_auth.ts  cli_auth_store.ts  http.ts  schema.ts  users.ts  users_actions.ts
convex/_generated/: api.d.ts
docker/: Dockerfile  entrypoint.sh  supervisord.conf
docker/scripts/: start.sh
docs/: README.md  deployment-secrets.md  google-auth-roadmap.md  helix-hot-paths.md  llm-configuration.md
infra/: README.md
scripts/: daemon-start.sh  daemon-status.sh  daemon-stop.sh  falkor-artifacts.json  falkor-ensure.sh  falkor-runtime.sh  local-build.sh  local-start.sh  local-status.sh  local-stop.sh  model-fetch.sh
scripts/dev/: local-start.sh
specs/: README.md  architecture-v1.md  cli-v1.md  current-implementation.md  daemon-api-mcp-v1.md  memory-pack-format-v1.md  prd-v1-local-memory.md  validation-plan-v1.md
specs/legacy/: architecture-v1.md  prd-v1-local-memory.md  validation-plan-v1.md
src/: add_docs.rs  auth.rs  cli_client.rs  cloud.rs  config.rs  conversation.rs  conversation_query.rs  embed.rs  extract.rs  falkor_store.rs  file_tree.rs  google.rs  helix_store.rs  indexer.rs  lancedb_store.rs  lib.rs  main.rs  memkit_txt.rs  ontology.rs  ontology_candle.rs  ontology_llama.rs  pack.rs  pack_location.rs  publish.rs  query.rs  query_synth.rs  registry.rs  server.rs  term.rs  types.rs  validate.rs
src/cli/: mod.rs  output.rs  parse.rs  schema.rs  types.rs
src/ontology/: mod.rs
src/pack/: mod.rs
src/query/: mod.rs
src/server/: add_route.rs  jobs.rs  mcp_route.rs  mod.rs  pack_helpers.rs  publish_route.rs  query_route.rs  remove_route.rs  status_route.rs
src/tui/: app.rs  ui.rs
tests/: api_smoke.rs  auth_cli.rs  version_cli.rs
www/: .env.example  README.md  next.config.ts  package.json  proxy.ts  tsconfig.json
www/app/: error.tsx  globals.css  layout.tsx  page.module.css  page.tsx
www/app/about/: page.tsx
www/app/actions/: polar.ts  resend.ts  stripe-creds.ts  users.ts
www/app/api/chat/: route.ts
www/app/api/welcome/: route.ts
www/app/checkout/: route.ts
www/app/checkout/start/: route.ts
www/app/dashboard/: page.tsx
www/app/settings/: page.tsx
www/app/signin/: page.tsx
www/app/signup/: page.tsx
www/components/: command-palette.tsx  convex-auth-provider.tsx  dashboard.tsx  discord-link.tsx  footer.tsx  get-started-button.tsx  github-link.tsx  logo.tsx  nav.tsx  new-user-welcome.tsx  oauth-button.tsx  platform-wrapper.tsx  platform.tsx  signup-modal.tsx  subscribe.tsx  theme-toggle.tsx  x-link.tsx
www/components/kibo-ui/code-block/: index.tsx
www/components/ui/: select.tsx
www/config/: auth.json  copy.json  dashboard.json  flags.json  index.ts  marketing.json  products.json  site.json
www/convex/: auth.ts  orgs.ts  schema.ts  users.ts
www/convex/_generated/: api.d.ts
www/lib/: utils.ts
www/types/: config.ts  platform.ts
