[package]
name = "memkit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mk"
path = "src/main.rs"

[features]
default = []
llama-embedded = ["dep:llama-cpp-2", "dep:encoding_rs"]

[dependencies]
anyhow = "1"
colored_json = "5"
owo-colors = { version = "4", features = ["supports-colors"] }
arrow-array = "57"
arrow-schema = "57"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
fastembed = "5"
futures-util = "0.3"
glob = "0.3"
lancedb = "0.26"
lance-index = "2.0"
llama-cpp-2 = { version = "0.1.138", optional = true }
notify = "8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
encoding_rs = { version = "0.8.35", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
redis = "1.0.4"
opener = "0.8"
