[package]
name = "memkit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mk"
path = "src/main.rs"

[[bin]]
name = "memkit-server"
path = "src/bin/memkit-server.rs"

[features]
default = ["store-helix-only"]
llama-embedded = ["dep:llama-cpp-2", "dep:encoding_rs"]
# Helix backend (vector + graph, one LMDB per pack)
helix = ["dep:helix-db", "dep:bumpalo", "dep:heed3"]
store-helix-only = ["helix"]

[dependencies]
anyhow = "1"
# Helix: crates.io 1.0.115 has build errors; use git main until a fix is published
helix-db = { git = "https://github.com/HelixDB/helix-db.git", optional = true, features = ["compiler"] }
bumpalo = { version = "3", optional = true }
heed3 = { version = "0.22", optional = true }
aws-config = "1.4"
aws-sdk-s3 = "1.54"
colored_json = "5"
owo-colors = { version = "4", features = ["supports-colors"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
convex = "0.10"
dirs = "6"
dotenvy = "0.15"
fs2 = "0.4"
fastembed = "5"
flate2 = "1"
glob = "0.3"
litchi = "0.0.1"
llama-cpp-2 = { version = "0.1.138", optional = true }
notify = "8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
encoding_rs = { version = "0.8.35", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
petname = "2"
walkdir = "2"
opener = "0.8"
pdf-extract = "0.10"
yup-oauth2 = { version = "12", features = ["hyper-rustls"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyper-rustls = "0.27"
indicatif = "0.17"
urlencoding = "2"
url = "2"
